--- a/components/mediation-admin/org.wso2.carbon.sequences.common/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.sequences.common/pom.xml
@@ -85,7 +85,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
         </dependency>
     </dependencies>
